py-qwt-qt5/TODO
Fails with clang:

> /tmp/pkgsrc-obj/wip/py-qwt-qt5/work/PyQt-Qwt-pyqt-qwt-1.02.00/Qwt/sipQwtQwtPowerTransform.cpp:231:65: error: object of type 'QwtPowerTransform' cannot be assigned because its copy assignment operator is implicitly deleted
>    reinterpret_cast< ::QwtPowerTransform *>(sipDst)[sipDstIdx] = *reinterpret_cast< ::QwtPowerTransform *>(sipSrc);
                                                                ^
> /tmp/pkgsrc-obj/wip/py-qwt-qt5/work/.buildlink/qwt-6.1.4/include/qwt_transform.h:139:18: note: copy assignment operator of 'QwtPowerTransform' is implicitly deleted because field 'd_exponent' is of const-qualified type 'const double'
>    const double d_exponent;

Removing the const qualifier in the qwt6-qt5 package seems to solve it,
but maybe it should do an element-wise copy instead of trying to
use the copy operator?

